<resources>
    <string name="app_name">Rount</string>
    <string name="start_title">Start</string>
    <string name="question_mark">\?</string>


    <!-- Navigation bar -->
    <string name="home_title">Home</string>
    <string name="create_rount_title">Create Rount</string>
    <string name="statistics_title">Stats</string>
    <string name="settings_title">Settings</string>

    <!-- Create Rount Screen -->
    <string name="create_name_title">Name Your Running Route</string>
    <string name="create_name_hint">NAME OF ROUNT</string>
    <string name="create_distance_title">Select Rount Distance</string>
    <string name="create_distance_hint_km">5.00 KM</string>
    <string name="create_distance_hint_mile">3.00 MI</string>
    <string name="create_location_title">Starts From</string>
    <string name="create_location_hint">CHOOSE LOCATION</string>
    <string name="create_next_step_button">Next Step</string>
    <string name="create_back_button_1">Change Name</string>
    <string name="create_back_button_2">Change Distance</string>

    <!-- Navigation Bar -->
    <string name="navigation_home">Home</string>
    <string name="navigation_create">Create</string>
    <string name="navigation_statistics">Statistics</string>
    <string name="navigation_settings">Settings</string>


    <!-- Using for preview only -->
    <string name="my_rounts_title">My Rounts</string>
    <string name="rount_name">Rount Name</string>
    <string name="rount_example_stats">0.0KM  00:00</string>
    <string name="example_icon_title">Icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_rount">Map</string>
</resources>