<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".CreateRountInput">

    <!-- Each input in a different layout, at the top of the screen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_weight="0.6"
        android:id="@+id/create_name_layout"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/create_name_title"
            android:id="@+id/create_name_title_text"
            android:autoSizeTextType="uniform"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textAllCaps="true"
            android:gravity="center"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|bottom"
            android:textSize="30sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="35sp"
            android:autoSizeMinTextSize="28sp"
            android:inputType="textCapCharacters"
            android:layout_marginTop="15dp"
            android:ems="8"
            android:maxEms="10"
            android:maxLength="14"
            android:hint="@string/create_name_hint"
            />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_weight="0.6"
        android:id="@+id/create_distance_layout"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/create_distance_title"
            android:id="@+id/create_distance_title_text"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="15sp"
            android:textAllCaps="true"
            android:autoSizeMaxTextSize="30sp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


        <!-- here should be a distance logo -->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center|bottom"
            android:textSize="30sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="35sp"
            android:autoSizeMinTextSize="28sp"
            android:inputType="textCapCharacters"
            android:ems="8"
            android:maxEms="10"
            android:maxLength="14"
            android:hint="@string/create_distance_hint_km"
            app:layout_constraintTop_toBottomOf="@id/create_distance_title_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_weight="0.6"
        android:id="@+id/create_location_layout"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/create_location_title"
            android:id="@+id/create_location_title"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="15sp"
            android:textAllCaps="true"
            android:autoSizeMaxTextSize="30sp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


        <!-- here should be a distance logo -->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center|bottom"
            android:textSize="30sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="35sp"
            android:autoSizeMinTextSize="28sp"
            android:inputType="textCapCharacters"
            android:ems="8"
            android:maxEms="10"
            android:maxLength="14"
            android:hint="@string/create_location_hint"
            app:layout_constraintTop_toBottomOf="@id/create_location_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Next/Previous button - at the bottom of the layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.2"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/create_input_fragment_invisible_margin"
            app:layout_constraintWidth_percent="0.4"
            android:id="@+id/fragment_create_input_back_button"
            android:text="@string/create_back_button_1"
            android:autoSizeTextType="uniform"
            android:padding="25dp"
            android:lines="1"
            android:layout_gravity="bottom|center"
            />
        <!-- Invisible view for margin percentage -->
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/fragment_create_input_next_button"
            app:layout_constraintStart_toEndOf="@id/fragment_create_input_back_button"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/create_input_fragment_invisible_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.05"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@id/create_input_fragment_invisible_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.4"
            android:id="@+id/fragment_create_input_next_button"
            android:text="@string/create_next_step_button"
            android:autoSizeTextType="uniform"
            android:padding="25dp"
            android:lines="1"
            android:layout_gravity="bottom|center"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>