<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!-- Using relative layout to place navigation bar at bottom -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <!--Button: Start Rount -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="40dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/start_button_background"
            android:elevation="1dp" />

        <View
            android:id="@+id/app_logo"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@android:color/darker_gray"
            android:elevation="2dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/app_logo"
            android:elevation="3dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:text="@string/start_title"
                android:textAllCaps="true"
                android:textSize="42sp" />

            <!--Fake view: Spacing Between both texts -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.01" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="14sp"
                android:autoSizeTextType="uniform"
                android:gravity="center_horizontal|top"
                android:text="@string/rount_name"
                android:textSize="28sp" />


        </LinearLayout>


    </RelativeLayout>

    <!--My Rounts menu-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/my_rounts_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_rounts_title"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:gravity="top"
                android:includeFontPadding="false"
                android:text="@string/my_rounts_title"
                android:textSize="28sp" />


            <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:background="@drawable/info_button_background"
                android:text="@string/question_mark" />


        </LinearLayout>


        <!-- Slide card-view for showing Rounts -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <!-- Inflated layout of rount card -->
                <include layout="@layout/rount_card" />

            </LinearLayout>


        </ScrollView>


    </LinearLayout>

    </LinearLayout>
    <!--Reusing the same navigation bar in each activity layout -->
    <include
        android:id="@+id/navigate_layout"
        layout="@layout/navigation_bar" />

</RelativeLayout>